// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Find-WinGetPackage > Search for Microsoft.PowerShell by exact id 1`] = `
{
  "AvailableVersions": [
    "7.5.2.0",
    "7.5.1.0",
    "7.5.0.0",
    "7.4.11.0",
    "7.4.10.0",
    "7.4.7.0",
    "7.4.6.0",
    "7.4.5.0",
    "7.4.4.0",
    "7.4.3.0",
    "7.4.2.0",
    "7.4.1.0",
    "7.4.0.0",
    "7.3.11.0",
    "7.3.10.0",
    "7.3.9.0",
    "7.3.8.0",
    "7.3.7.0",
    "7.3.6.0",
    "7.3.5.0",
    "7.3.4.0",
    "7.3.3.0",
    "7.3.2.0",
    "7.3.1.0",
    "7.3.0.0",
    "7.2.24.0",
    "7.2.23.0",
    "7.2.22.0",
    "7.2.21.0",
    "7.2.18.0",
    "7.2.17.0",
    "7.2.16.0",
    "7.2.14.0",
    "7.2.13.0",
    "7.2.12.0",
    "7.2.10.0",
    "7.2.9.0",
    "7.2.8.0",
    "7.2.7.0",
    "7.2.6.0",
    "7.2.5.0",
    "7.2.4.0",
    "7.2.3.0",
    "7.2.2.0",
    "7.2.1.0",
    "7.2.0.0",
    "7.1.5.0",
    "7.1.4.0",
    "7.1.3.0",
    "7.1.2.0",
    "7.1.1.0",
    "7.1.0.0",
    "7.0.13.0",
    "7.0.8.0",
    "7.0.6.0",
    "7.0.5.0",
    "7.0.4.0",
    "7.0.3.0",
    "7.0.2.0",
    "7.0.1.0",
    "7.0.0.0",
    "6.2.6.0",
    "6.2.5.0",
    "6.2.4.0",
    "6.2.3.0",
    "6.2.2.0",
    "6.2.1.0",
    "6.2.0.0",
    "6.1.6.0",
    "6.1.5.0",
    "6.1.4.0",
    "6.1.3.0",
    "6.1.2.0",
    "6.1.1.0",
    "6.1.0.0",
    "6.0.5.0",
    "6.0.4.0",
    "6.0.3.0",
    "6.0.2.0",
    "6.0.1.0",
    "6.0.0.0",
  ],
  "Id": "Microsoft.PowerShell",
  "IsUpdateAvailable": false,
  "Name": "PowerShell",
  "Source": "winget",
  "Version": "7.5.2.0",
}
`;

exports[`Find-WinGetPackage > Search for Microsoft.PowerShell by id 1`] = `
[
  {
    "AvailableVersions": [
      "7.5.2.0",
      "7.5.1.0",
      "7.5.0.0",
      "7.4.11.0",
      "7.4.10.0",
      "7.4.7.0",
      "7.4.6.0",
      "7.4.5.0",
      "7.4.4.0",
      "7.4.3.0",
      "7.4.2.0",
      "7.4.1.0",
      "7.4.0.0",
      "7.3.11.0",
      "7.3.10.0",
      "7.3.9.0",
      "7.3.8.0",
      "7.3.7.0",
      "7.3.6.0",
      "7.3.5.0",
      "7.3.4.0",
      "7.3.3.0",
      "7.3.2.0",
      "7.3.1.0",
      "7.3.0.0",
      "7.2.24.0",
      "7.2.23.0",
      "7.2.22.0",
      "7.2.21.0",
      "7.2.18.0",
      "7.2.17.0",
      "7.2.16.0",
      "7.2.14.0",
      "7.2.13.0",
      "7.2.12.0",
      "7.2.10.0",
      "7.2.9.0",
      "7.2.8.0",
      "7.2.7.0",
      "7.2.6.0",
      "7.2.5.0",
      "7.2.4.0",
      "7.2.3.0",
      "7.2.2.0",
      "7.2.1.0",
      "7.2.0.0",
      "7.1.5.0",
      "7.1.4.0",
      "7.1.3.0",
      "7.1.2.0",
      "7.1.1.0",
      "7.1.0.0",
      "7.0.13.0",
      "7.0.8.0",
      "7.0.6.0",
      "7.0.5.0",
      "7.0.4.0",
      "7.0.3.0",
      "7.0.2.0",
      "7.0.1.0",
      "7.0.0.0",
      "6.2.6.0",
      "6.2.5.0",
      "6.2.4.0",
      "6.2.3.0",
      "6.2.2.0",
      "6.2.1.0",
      "6.2.0.0",
      "6.1.6.0",
      "6.1.5.0",
      "6.1.4.0",
      "6.1.3.0",
      "6.1.2.0",
      "6.1.1.0",
      "6.1.0.0",
      "6.0.5.0",
      "6.0.4.0",
      "6.0.3.0",
      "6.0.2.0",
      "6.0.1.0",
      "6.0.0.0",
    ],
    "Id": "Microsoft.PowerShell",
    "IsUpdateAvailable": false,
    "Name": "PowerShell",
    "Source": "winget",
    "Version": "7.5.2.0",
  },
  {
    "AvailableVersions": [
      "7.6.0.4",
      "7.6.0.3",
      "7.6.0.2",
      "7.5.0.101",
      "7.5.0.5",
      "7.5.0.4",
      "7.5.0.3",
      "7.5.0.2",
      "7.5.0.1",
      "7.4.0.101",
      "7.4.0.6",
      "7.4.0.5",
      "7.4.0.4",
      "7.4.0.3",
      "7.4.0.2",
      "7.4.0.1",
      "7.3.0.101",
      "7.3.0.8",
      "7.3.0.7",
      "7.3.0.6",
      "7.3.0.5",
      "7.3.0.4",
      "7.3.0.3",
      "7.3.0.2",
      "7.3.0.1",
      "7.2.0.10",
      "7.2.0.9",
      "7.2.0.8",
      "7.2.0.7",
      "7.2.0.6",
      "7.2.0.5",
      "7.2.0.4",
      "7.2.0.3",
      "7.2.0.1",
      "7.1.0.7",
      "7.1.0.6",
      "7.1.0.5",
      "7.1.0.3",
      "7.1.0.2",
      "7.1.0.1",
      "7.0.2.0",
    ],
    "Id": "Microsoft.PowerShell.Preview",
    "IsUpdateAvailable": false,
    "Name": "PowerShell Preview",
    "Source": "winget",
    "Version": "7.6.0.4",
  },
]
`;

exports[`Find-WinGetPackage > Search for PowerShell 1`] = `
[
  {
    "AvailableVersions": [
      "Unknown",
    ],
    "Id": "9MZ1SNWT0N5D",
    "IsUpdateAvailable": false,
    "Name": "PowerShell",
    "Source": "msstore",
    "Version": "Unknown",
  },
  {
    "AvailableVersions": [
      "Unknown",
    ],
    "Id": "9P95ZZKTNRN4",
    "IsUpdateAvailable": false,
    "Name": "PowerShell Preview",
    "Source": "msstore",
    "Version": "Unknown",
  },
  {
    "AvailableVersions": [
      "1.1.0.0",
    ],
    "Id": "XPDCHZH119SRT8",
    "IsUpdateAvailable": false,
    "Name": "PowerShell to exe&msi Converter free",
    "Source": "msstore",
    "Version": "1.1.0.0",
  },
  {
    "AvailableVersions": [
      "7.5.2.0",
      "7.5.1.0",
      "7.5.0.0",
      "7.4.11.0",
      "7.4.10.0",
      "7.4.7.0",
      "7.4.6.0",
      "7.4.5.0",
      "7.4.4.0",
      "7.4.3.0",
      "7.4.2.0",
      "7.4.1.0",
      "7.4.0.0",
      "7.3.11.0",
      "7.3.10.0",
      "7.3.9.0",
      "7.3.8.0",
      "7.3.7.0",
      "7.3.6.0",
      "7.3.5.0",
      "7.3.4.0",
      "7.3.3.0",
      "7.3.2.0",
      "7.3.1.0",
      "7.3.0.0",
      "7.2.24.0",
      "7.2.23.0",
      "7.2.22.0",
      "7.2.21.0",
      "7.2.18.0",
      "7.2.17.0",
      "7.2.16.0",
      "7.2.14.0",
      "7.2.13.0",
      "7.2.12.0",
      "7.2.10.0",
      "7.2.9.0",
      "7.2.8.0",
      "7.2.7.0",
      "7.2.6.0",
      "7.2.5.0",
      "7.2.4.0",
      "7.2.3.0",
      "7.2.2.0",
      "7.2.1.0",
      "7.2.0.0",
      "7.1.5.0",
      "7.1.4.0",
      "7.1.3.0",
      "7.1.2.0",
      "7.1.1.0",
      "7.1.0.0",
      "7.0.13.0",
      "7.0.8.0",
      "7.0.6.0",
      "7.0.5.0",
      "7.0.4.0",
      "7.0.3.0",
      "7.0.2.0",
      "7.0.1.0",
      "7.0.0.0",
      "6.2.6.0",
      "6.2.5.0",
      "6.2.4.0",
      "6.2.3.0",
      "6.2.2.0",
      "6.2.1.0",
      "6.2.0.0",
      "6.1.6.0",
      "6.1.5.0",
      "6.1.4.0",
      "6.1.3.0",
      "6.1.2.0",
      "6.1.1.0",
      "6.1.0.0",
      "6.0.5.0",
      "6.0.4.0",
      "6.0.3.0",
      "6.0.2.0",
      "6.0.1.0",
      "6.0.0.0",
    ],
    "Id": "Microsoft.PowerShell",
    "IsUpdateAvailable": false,
    "Name": "PowerShell",
    "Source": "winget",
    "Version": "7.5.2.0",
  },
  {
    "AvailableVersions": null,
    "Id": "Abdelrhman-AK.WinPaletter",
    "IsUpdateAvailable": null,
    "Name": "WinPaletter",
    "Source": null,
    "Version": null,
  },
  {
    "AvailableVersions": [
      "5.56.0",
      "5.50.0",
      "5.48.0",
      "5.43.0",
      "5.42.0",
      "5.41.0",
      "5.40.0",
      "5.39.0",
    ],
    "Id": "AutomatedLab.AutomatedLab",
    "IsUpdateAvailable": false,
    "Name": "AutomatedLab",
    "Source": "winget",
    "Version": "5.56.0",
  },
  {
    "AvailableVersions": [
      "1.0.2",
    ],
    "Id": "DarkfullDante.wol",
    "IsUpdateAvailable": false,
    "Name": "wol",
    "Source": "winget",
    "Version": "1.0.2",
  },
  {
    "AvailableVersions": [
      "2.9.1",
      "2.9.0",
      "2.8.2",
      "2.8.1",
      "2.8.0",
      "2.7.1.3540",
      "2.7.0.3540",
      "2.6.1.3491",
      "2.6.0.2898",
      "2.5.1.2859",
      "2.5.0.2840",
      "2.4.1.2827",
      "2.4.0.2768",
      "2.3.1.2724",
      "2.3.0.2718",
      "2.2.1.2667",
      "2.2.0.2661",
      "2.1.4.2594",
      "2.1.3.2589",
      "2.1.2.2513",
      "2.1.1.2511",
      "2.1.0.2485",
      "2.0.1.2474",
    ],
    "Id": "Igoravl.TfsCmdlets",
    "IsUpdateAvailable": false,
    "Name": "TfsCmdlets",
    "Source": "winget",
    "Version": "2.9.1",
  },
  {
    "AvailableVersions": [
      "0.26.5",
      "0.26.4",
      "0.26.3",
      "0.26.2",
      "0.26.1",
      "0.26.0",
      "0.25.0",
      "0.24.1",
      "0.24.0",
      "0.23.0",
      "0.22.2",
      "0.22.1",
      "0.21.0",
      "0.20.1",
      "0.20.0",
      "0.19.0",
      "0.18.0",
      "0.17.2",
      "0.17.1",
      "0.17.0",
      "0.16.0",
      "0.15.0",
      "0.14.0",
      "0.13.2",
      "0.13.1",
      "0.13.0",
      "0.12.0",
      "0.11.3",
      "0.11.0",
      "0.10.0",
      "0.9.4",
      "0.9.3",
      "0.9.2",
      "0.9.1",
      "0.9.0",
      "0.8.0",
      "0.7.0",
      "0.6.0",
      "0.5.0",
      "0.4.0",
      "0.3.0",
      "0.2.0",
      "0.1.1",
      "0.1.0",
    ],
    "Id": "JanDeDobbeleer.Aliae",
    "IsUpdateAvailable": false,
    "Name": "Aliae",
    "Source": "winget",
    "Version": "0.26.5",
  },
  {
    "AvailableVersions": [
      "26.13.0",
      "26.12.0",
      "26.11.0",
      "26.10.1",
      "26.10.0",
      "26.9.0",
      "26.8.0",
      "26.7.0",
      "26.6.1",
      "26.6.0",
      "26.5.0",
      "26.4.2",
      "26.4.1",
      "26.4.0",
      "26.3.0",
      "26.2.2",
      "26.2.1",
      "26.2.0",
      "26.1.0",
      "26.0.5",
      "26.0.4",
      "26.0.3",
      "26.0.2",
      "26.0.1",
      "26.0.0",
      "25.23.3",
      "25.23.2",
      "25.23.1",
      "25.23.0",
      "25.22.0",
      "25.21.1",
      "25.21.0",
      "25.20.1",
      "25.20.0",
      "25.19.0",
      "25.18.0",
      "25.17.0",
      "25.16.1",
      "25.16.0",
      "25.15.0",
      "25.14.0",
      "25.13.0",
      "25.12.0",
      "25.11.2",
      "25.11.1",
      "25.11.0",
      "25.10.2",
      "25.10.1",
      "25.10.0",
      "25.9.0",
      "25.8.0",
      "25.7.1",
      "25.7.0",
      "25.6.1",
      "25.6.0",
      "25.5.1",
      "25.5.0",
      "25.4.3",
      "25.4.2",
      "25.4.1",
      "25.3.0",
      "25.2.1",
      "25.2.0",
      "25.1.1",
      "25.1.0",
      "25.0.0",
      "24.19.0",
      "24.18.1",
      "24.18.0",
      "24.17.1",
      "24.17.0",
      "24.16.1",
      "24.16.0",
      "24.15.1",
      "24.15.0",
      "24.14.0",
      "24.13.1",
      "24.13.0",
      "24.12.0",
      "24.11.4",
      "24.11.2",
      "24.10.1",
      "24.9.1",
      "24.9.0",
      "24.8.0",
      "24.6.5",
      "24.6.4",
      "24.6.3",
      "24.5.2",
      "24.5.1",
      "24.5.0",
      "24.4.1",
      "24.4.0",
      "24.3.0",
      "24.2.2",
      "24.2.1",
      "24.1.0",
      "24.0.11",
      "24.0.10",
      "24.0.9",
      "24.0.8",
      "24.0.7",
      "24.0.6",
      "24.0.5",
      "24.0.4",
      "24.0.3",
      "23.20.3",
      "23.20.2",
      "23.20.1",
      "23.20.0",
      "23.19.0",
      "23.18.0",
      "23.17.0",
      "23.16.0",
      "23.15.3",
      "23.15.2",
      "23.15.1",
      "23.15.0",
      "23.14.2",
      "23.14.1",
      "23.14.0",
      "23.13.4",
      "23.13.3",
      "23.13.2",
      "23.13.1",
      "23.13.0",
      "23.12.0",
      "23.11.1",
      "23.11.0",
      "23.10.1",
      "23.10.0",
      "23.9.1",
      "23.9.0",
      "23.8.0",
      "23.7.2",
      "23.7.1",
      "23.7.0",
      "23.6.8",
      "23.6.7",
      "23.6.6",
      "23.6.5",
      "23.6.4",
      "23.6.3",
      "23.6.2",
      "23.6.1",
      "23.6.0",
      "23.5.0",
      "23.4.1",
      "23.4.0",
      "23.3.3",
      "23.3.2",
      "23.3.1",
      "23.3.0",
      "23.2.1",
      "23.2.0",
      "23.1.0",
      "23.0.2",
      "23.0.1",
      "23.0.0",
      "22.3.0",
      "22.2.0",
      "22.1.0",
      "22.0.3",
      "22.0.2",
      "22.0.1",
      "22.0.0",
      "21.28.0",
      "21.27.0",
      "21.26.4",
      "21.26.3",
      "21.26.2",
      "21.26.1",
      "21.26.0",
      "21.25.0",
      "21.24.0",
      "21.23.6",
      "21.23.5",
      "21.23.4",
      "21.23.3",
      "21.23.2",
      "21.23.1",
      "21.23.0",
      "21.22.0",
      "21.21.3",
      "21.21.2",
      "21.21.1",
      "21.21.0",
      "21.20.2",
      "21.20.1",
      "21.20.0",
      "21.19.0",
      "21.18.2",
      "21.18.1",
      "21.17.2",
      "21.17.1",
      "21.17.0",
      "21.16.2",
      "21.16.1",
      "21.16.0",
      "21.15.1",
      "21.15.0",
      "21.14.0",
      "21.13.1",
      "21.13.0",
      "21.12.1",
      "21.12.0",
      "21.11.0",
      "21.10.3",
      "21.10.2",
      "21.10.1",
      "21.10.0",
      "21.9.1",
      "21.9.0",
      "21.8.0",
      "21.7.0",
      "21.6.0",
      "21.5.0",
      "21.4.0",
      "21.3.0",
      "21.2.2",
      "21.2.1",
      "21.2.0",
      "21.1.0",
      "21.0.1",
      "21.0.0",
      "20.2.3",
      "20.2.2",
      "20.2.1",
      "20.2.0",
      "20.1.0",
      "20.0.2",
      "20.0.1",
      "20.0.0",
      "19.32.0",
      "19.31.0",
      "19.30.0",
      "19.29.1",
      "19.29.0",
      "19.28.0",
      "19.27.0",
      "19.26.1",
      "19.26.0",
      "19.25.0",
      "19.24.3",
      "19.24.2",
      "19.24.1",
      "19.24.0",
      "19.23.1",
      "19.23.0",
      "19.22.0",
      "19.21.1",
      "19.21.0",
      "19.20.0",
      "19.19.0",
      "19.18.1",
      "19.18.0",
      "19.17.2",
      "19.17.1",
      "19.17.0",
      "19.16.2",
      "19.16.1",
      "19.16.0",
      "19.15.1",
      "19.15.0",
      "19.14.0",
      "19.13.0",
      "19.12.0",
      "19.11.7",
      "19.11.6",
      "19.11.5",
      "19.11.4",
      "19.11.3",
      "19.11.2",
      "19.11.1",
      "19.11.0",
      "19.10.0",
      "19.9.0",
      "19.8.3",
      "19.8.2",
      "19.8.1",
      "19.8.0",
      "19.7.0",
      "19.6.0",
      "19.5.2",
      "19.5.1",
      "19.4.0",
      "19.3.1",
      "19.3.0",
      "19.2.1",
      "19.2.0",
      "19.1.1",
      "19.1.0",
      "19.0.0",
      "18.28.0",
      "18.27.1",
      "18.27.0",
      "18.26.1",
      "18.26.0",
      "18.25.1",
      "18.25.0",
      "18.24.0",
      "18.23.3",
      "18.23.2",
      "18.23.1",
      "18.23.0",
      "18.22.0",
      "18.21.1",
      "18.21.0",
      "18.20.0",
      "18.19.0",
      "18.18.1",
      "18.18.0",
      "18.17.3",
      "18.17.2",
      "18.17.1",
      "18.17.0",
      "18.16.2",
      "18.16.1",
      "18.16.0",
      "18.15.0",
      "18.14.1",
      "18.14.0",
      "18.13.1",
      "18.13.0",
      "18.12.0",
      "18.11.0",
      "18.10.3",
      "18.10.2",
      "18.10.1",
      "18.10.0",
      "18.9.1",
      "18.9.0",
      "18.8.1",
      "18.8.0",
      "18.7.0",
      "18.6.4",
      "18.6.3",
      "18.6.2",
      "18.6.1",
      "18.6.0",
      "18.5.1",
      "18.5.0",
      "18.4.0",
      "18.3.5",
      "18.3.4",
      "18.3.3",
      "18.3.2",
      "18.3.1",
      "18.3.0",
      "18.2.5",
      "18.2.4",
      "18.2.3",
      "18.2.2",
      "18.2.1",
      "18.2.0",
      "18.1.0",
      "18.0.1",
      "18.0.0",
      "17.12.1",
      "17.12.0",
      "17.11.3",
      "17.11.2",
      "17.11.1",
      "17.11.0",
      "17.10.0",
      "17.9.1",
      "17.9.0",
      "17.8.0",
      "17.7.0",
      "17.6.0",
      "17.5.3",
      "17.5.2",
      "17.5.1",
      "17.5.0",
      "17.4.0",
      "17.3.0",
      "17.2.0",
      "17.1.0",
      "17.0.0",
      "16.10.0",
      "16.9.1",
      "16.9.0",
      "16.8.0",
      "16.7.2",
      "16.7.1",
      "16.6.0",
      "16.5.0",
      "16.4.4",
      "16.4.3",
      "16.4.1",
      "16.4.0",
      "16.3.0",
      "16.2.3",
      "16.2.2",
      "16.2.1",
      "16.2.0",
      "16.1.1",
      "16.1.0",
      "16.0.0",
      "15.5.0",
      "15.4.3",
      "15.4.2",
      "15.4.1",
      "15.4.0",
      "15.3.0",
      "15.2.0",
      "15.1.0",
      "15.0.0",
      "14.32.2",
      "14.32.1",
      "14.32.0",
      "14.31.7",
      "14.31.6",
      "14.31.5",
      "14.31.4",
      "14.31.3",
      "14.31.2",
      "14.31.1",
      "14.31.0",
      "14.30.0",
      "14.29.3",
      "14.29.2",
      "14.29.1",
      "14.29.0",
      "14.28.0",
      "14.27.0",
      "14.26.0",
      "14.25.1",
      "14.25.0",
      "14.24.0",
      "14.23.1",
      "14.23.0",
      "14.22.0",
      "14.21.0",
      "14.20.0",
      "14.19.5",
      "14.19.4",
      "14.19.3",
      "14.19.2",
      "14.19.1",
      "14.19.0",
      "14.17.0",
      "14.16.0",
      "14.15.0",
      "14.14.4",
      "14.14.3",
      "14.14.2",
      "14.14.1",
      "14.14.0",
      "14.13.1",
      "14.13.0",
      "14.12.1",
      "14.12.0",
      "14.11.0",
      "14.10.1",
      "14.10.0",
      "14.9.2",
      "14.9.1",
      "14.9.0",
      "14.8.0",
      "14.7.1",
      "14.7.0",
      "14.6.0",
      "14.5.0",
      "14.4.0",
      "14.3.0",
      "14.2.8",
      "14.2.7",
      "14.2.6",
      "14.2.5",
      "14.2.4",
      "14.2.3",
      "14.2.2",
      "14.2.0",
      "14.1.2",
      "14.1.1",
      "14.1.0",
      "14.0.3",
      "14.0.2",
      "14.0.1",
      "14.0.0",
      "13.9.0",
      "13.8.0",
      "13.7.0",
      "13.6.0",
      "13.5.0",
      "13.4.0",
      "13.3.1",
      "13.3.0",
      "13.2.0",
      "13.1.2",
      "13.1.1",
      "13.1.0",
      "13.0.0",
      "12.40.0",
      "12.39.1",
      "12.38.1",
      "12.38.0",
      "12.37.0",
      "12.36.0",
      "12.35.2",
      "12.35.1",
      "12.35.0",
      "12.34.6",
      "12.34.5",
      "12.34.4",
      "12.34.3",
      "12.34.2",
      "12.34.1",
      "12.34.0",
      "12.33.1",
      "12.33.0",
      "12.32.0",
      "12.31.1",
      "12.31.0",
      "12.30.1",
      "12.30.0",
      "12.29.0",
      "12.28.3",
      "12.28.2",
      "12.28.1",
      "12.28.0",
      "12.27.0",
      "12.26.8",
      "12.26.6",
      "12.26.5",
      "12.26.2",
      "12.26.0",
      "12.25.3",
      "12.25.2",
      "12.25.1",
      "12.25.0",
      "12.24.0",
      "12.23.0",
      "12.22.0",
      "12.21.0",
      "12.20.0",
      "12.19.0",
      "12.18.3",
      "12.18.2",
      "12.18.1",
      "12.18.0",
      "12.17.3",
      "12.17.2",
      "12.17.1",
      "12.17.0",
      "12.16.1",
      "12.16.0",
      "12.15.1",
      "12.15.0",
      "12.14.1",
      "12.14.0",
      "12.13.3",
      "12.13.2",
      "12.13.1",
      "12.13.0",
      "12.12.1",
      "12.12.0",
      "12.11.0",
      "12.10.0",
      "12.9.1",
      "12.9.0",
      "12.8.0",
      "12.7.1",
      "12.7.0",
      "12.6.8",
      "12.6.7",
      "12.6.6",
      "12.6.5",
      "12.6.4",
      "12.6.3",
      "12.6.2",
      "12.6.1",
      "12.6.0",
      "12.5.1",
      "12.5.0",
      "12.4.0",
      "12.3.3",
      "12.3.2",
      "12.3.1",
      "12.3.0",
      "12.2.2",
      "12.2.1",
      "12.2.0",
      "12.1.0",
      "12.0.1",
      "12.0.0",
      "11.4.0",
      "11.3.3",
      "11.3.2",
      "11.3.1",
      "11.3.0",
      "11.2.0",
      "11.1.1",
      "11.1.0",
      "11.0.1",
      "11.0.0",
      "10.3.0",
      "10.2.0",
      "10.1.0",
      "10.0.1",
      "9.5.0",
      "9.4.1",
      "9.4.0",
      "9.3.4",
      "9.3.3",
      "9.3.2",
      "9.3.1",
      "9.3.0",
      "9.2.0",
      "9.1.0",
      "9.0.0",
      "8.37.1",
      "8.37.0",
      "8.36.7",
      "8.36.6",
      "8.36.5",
      "8.36.4",
      "8.36.3",
      "8.36.2",
      "8.36.1",
      "8.36.0",
      "8.35.2",
      "8.35.1",
      "8.35.0",
      "8.34.0",
      "8.33.2",
      "8.33.1",
      "8.33.0",
      "8.32.4",
      "8.32.3",
      "8.32.2",
      "8.32.1",
      "8.32.0",
      "8.31.1",
      "8.31.0",
      "8.30.0",
      "8.29.5",
      "8.29.4",
      "8.29.3",
      "8.29.2",
      "8.29.1",
      "8.29.0",
      "8.28.0",
      "8.27.0",
      "8.26.1",
      "8.26.0",
      "8.25.0",
      "8.24.0",
      "8.23.3",
      "8.23.2",
      "8.23.1",
      "8.23.0",
      "8.22.9",
      "8.22.8",
      "8.22.7",
      "8.22.6",
      "8.22.5",
      "8.22.4",
      "8.22.3",
      "8.22.2",
      "8.22.1",
      "8.22.0",
      "8.21.0",
      "8.20.1",
      "8.20.0",
      "8.19.0",
      "8.17.1",
      "8.17.0",
      "8.16.0",
      "8.15.3",
      "8.15.2",
      "8.15.1",
      "8.15.0",
      "8.14.0",
      "8.13.1",
      "8.12.0",
      "8.11.2",
      "8.11.1",
      "8.11.0",
      "8.10.2",
      "8.10.0",
      "8.9.2",
      "8.9.1",
      "8.9.0",
      "8.8.1",
      "8.8.0",
      "8.7.1",
      "8.7.0",
      "8.6.2",
      "8.6.1",
      "8.6.0",
      "8.5.3",
      "8.5.2",
      "8.5.1",
      "8.5.0",
      "8.4.0",
      "8.3.2",
      "8.3.1",
      "8.3.0",
      "8.2.0",
      "8.1.1",
      "8.1.0",
      "8.0.1",
      "8.0.0",
    ],
    "Id": "JanDeDobbeleer.OhMyPosh",
    "IsUpdateAvailable": false,
    "Name": "Oh My Posh",
    "Source": "winget",
    "Version": "26.13.0",
  },
  {
    "AvailableVersions": [
      "3.2.0",
      "3.1.8",
      "3.1.7",
      "3.1.6",
      "3.1.5",
      "3.1.4",
      "3.1.3",
      "3.1.2",
      "3.1.1",
      "3.1.0",
    ],
    "Id": "MartiCliment.UniGetUI",
    "IsUpdateAvailable": false,
    "Name": "UniGetUI (formerly WingetUI)",
    "Source": "winget",
    "Version": "3.2.0",
  },
  {
    "AvailableVersions": [
      "11.230.7240",
      "11.221.2180",
      "11.220.8070",
      "11.220.4180",
      "11.220.3080",
      "11.210.9120",
      "11.210.9050",
      "11.210.8220",
      "11.210.8160",
      "11.210.7180",
      "11.210.6270",
      "11.210.6240",
      "11.210.6200",
    ],
    "Id": "Maximus5.ConEmu",
    "IsUpdateAvailable": false,
    "Name": "ConEmu",
    "Source": "winget",
    "Version": "11.230.7240",
  },
  {
    "AvailableVersions": [
      "7.6.0.4",
      "7.6.0.3",
      "7.6.0.2",
      "7.5.0.101",
      "7.5.0.5",
      "7.5.0.4",
      "7.5.0.3",
      "7.5.0.2",
      "7.5.0.1",
      "7.4.0.101",
      "7.4.0.6",
      "7.4.0.5",
      "7.4.0.4",
      "7.4.0.3",
      "7.4.0.2",
      "7.4.0.1",
      "7.3.0.101",
      "7.3.0.8",
      "7.3.0.7",
      "7.3.0.6",
      "7.3.0.5",
      "7.3.0.4",
      "7.3.0.3",
      "7.3.0.2",
      "7.3.0.1",
      "7.2.0.10",
      "7.2.0.9",
      "7.2.0.8",
      "7.2.0.7",
      "7.2.0.6",
      "7.2.0.5",
      "7.2.0.4",
      "7.2.0.3",
      "7.2.0.1",
      "7.1.0.7",
      "7.1.0.6",
      "7.1.0.5",
      "7.1.0.3",
      "7.1.0.2",
      "7.1.0.1",
      "7.0.2.0",
    ],
    "Id": "Microsoft.PowerShell.Preview",
    "IsUpdateAvailable": false,
    "Name": "PowerShell Preview",
    "Source": "winget",
    "Version": "7.6.0.4",
  },
  {
    "AvailableVersions": [
      "1.22.11751.0",
      "1.22.11141.0",
      "1.22.10731.0",
      "1.22.10352.0",
      "1.21.10351.0",
      "1.21.3231.0",
      "1.21.2911.0",
      "1.21.2701.0",
      "1.21.2361.0",
      "1.20.11781.0",
      "1.20.11381.0",
      "1.20.11271.0",
      "1.19.11213.0",
      "1.19.10821.0",
      "1.19.10573.0",
      "1.19.10302.0",
      "1.19.10292.0",
      "1.18.10301.0",
      "1.18.10291.0",
      "1.18.3181.0",
      "1.18.2822.0",
      "1.18.2681.0",
      "1.16.10261.0",
      "1.16.10231.0",
      "1.15.3465.0",
      "1.15.2874.0",
      "1.15.2524.0",
      "1.14.2281.0",
      "1.13.11431.0",
      "1.12.10983.0",
      "1.12.10982.0",
      "1.12.10733.0",
      "1.12.10732.0",
      "1.12.10393.0",
      "1.12.10334.0",
      "1.11.3471.0",
      "1.11.2921.0",
      "1.10.2714.0",
      "1.10.2383.0",
      "1.9.1942.0",
      "1.8.1444.0",
      "1.7.1033.0",
      "1.6.10571.0",
      "1.5.10411.0",
      "1.5.10271.0",
      "1.4.3243.0",
      "1.4.3141.0",
      "1.3.2651.0",
      "1.2.2381.0",
      "1.1.2233.0",
      "1.1.2021.0",
      "1.0.1811.0",
      "1.0.1401.0",
      "0.11.1333.0",
      "0.11.1251.0",
    ],
    "Id": "Microsoft.WindowsTerminal",
    "IsUpdateAvailable": false,
    "Name": "Windows Terminal",
    "Source": "winget",
    "Version": "1.22.11751.0",
  },
  {
    "AvailableVersions": [
      "1.23.11752.0",
      "1.23.11132.0",
      "1.23.10732.0",
      "1.23.10353.0",
      "1.22.3232.0",
      "1.22.2912.0",
      "1.22.2702.0",
      "1.22.2362.0",
      "1.21.1772.0",
      "1.21.1382.0",
      "1.21.1272.0",
      "1.20.11215.0",
      "1.20.10822.0",
      "1.20.10572.0",
      "1.20.10303.0",
      "1.20.10293.0",
      "1.19.3172.0",
      "1.19.2831.0",
      "1.19.2682.0",
      "1.18.1462.0",
      "1.17.10234.0",
      "1.16.3463.0",
      "1.16.2641.0",
      "1.16.2523.0",
      "1.15.2282.0",
      "1.15.2002.0",
      "1.14.1432.0",
      "1.13.10734.0",
      "1.13.10733.0",
      "1.13.10395.0",
      "1.12.2931.0",
      "1.12.2922.0",
      "1.11.2731.0",
      "1.11.2421.0",
      "1.10.1933.0",
      "1.9.1445.0",
      "1.7.572.0",
      "1.6.10412.0",
      "1.6.10272.0",
      "1.5.3242.0",
      "1.5.3142.0",
      "1.4.2652.0",
      "1.3.2382.0",
      "1.2.2234.0",
      "1.2.2022.0",
      "1.1.1812.0",
      "1.1.1671.0",
    ],
    "Id": "Microsoft.WindowsTerminal.Preview",
    "IsUpdateAvailable": false,
    "Name": "Windows Terminal Preview",
    "Source": "winget",
    "Version": "1.23.11752.0",
  },
  {
    "AvailableVersions": [
      "0.1.8.0",
    ],
    "Id": "RedCodeLabs.easyWSL",
    "IsUpdateAvailable": false,
    "Name": "easyWSL",
    "Source": "winget",
    "Version": "0.1.8.0",
  },
  {
    "AvailableVersions": [
      "1.23.0",
      "1.22.1",
      "1.21.1",
      "1.21.0",
      "1.20.1",
      "1.19.0",
      "1.18.2",
      "1.18.1",
      "1.18.0",
      "1.17.1",
      "1.17.0",
      "1.16.0",
      "1.15.0",
      "1.14.2",
      "1.14.1",
      "1.14.0",
      "1.13.1",
      "1.13.0",
      "1.12.0",
      "1.11.0",
      "1.10.3",
      "1.10.2",
      "1.10.1",
      "1.9.1",
      "1.8.0",
    ],
    "Id": "Starship.Starship",
    "IsUpdateAvailable": false,
    "Name": "starship",
    "Source": "winget",
    "Version": "1.23.0",
  },
  {
    "AvailableVersions": [
      "6.8.7",
      "6.8.6",
      "6.8.5",
    ],
    "Id": "TeamSophia.SophiaScript",
    "IsUpdateAvailable": false,
    "Name": "Sophia Script for Windows",
    "Source": "winget",
    "Version": "6.8.7",
  },
  {
    "AvailableVersions": [
      "0.1.12",
      "0.1.11",
      "0.1.10",
      "0.1.7",
      "0.1.6",
    ],
    "Id": "Watfaq.PowerSession",
    "IsUpdateAvailable": false,
    "Name": "PowerSession",
    "Source": "winget",
    "Version": "0.1.12",
  },
  {
    "AvailableVersions": [
      "1.13.0",
      "1.12.0",
      "1.7.0",
      "1.6.2",
    ],
    "Id": "antonmedv.walk",
    "IsUpdateAvailable": false,
    "Name": "walk",
    "Source": "winget",
    "Version": "1.13.0",
  },
  {
    "AvailableVersions": [
      "2.36.0",
      "2.35.0",
      "2.34.0",
      "2.33.0",
      "2.32.3",
      "2.32.2",
    ],
    "Id": "direnv.direnv",
    "IsUpdateAvailable": false,
    "Name": "direnv",
    "Source": "winget",
    "Version": "2.36.0",
  },
  {
    "AvailableVersions": [
      "1.100.8",
      "1.100.6",
      "1.91.16",
      "1.91.8",
      "1.91.1",
      "1.90.8",
      "1.90.6",
      "1.80.18",
      "1.80.6",
      "1.80.5",
      "1.80.3",
      "1.80.2",
      "1.72.48",
      "1.72.18",
      "1.72.6",
      "1.70.6",
      "1.70.0",
      "1.60.56",
      "1.60.50",
      "1.60.48",
      "1.60.36",
      "1.60.32",
      "1.60.29",
      "1.60.16",
      "1.60.6",
      "1.51.18",
      "1.51.8",
      "1.51.3",
      "1.51.0",
      "1.50.66",
      "1.50.65",
      "1.50.59",
      "1.50.46",
      "1.50.40",
      "1.50.21",
      "1.40.20",
      "1.40.18",
      "1.40.16",
      "1.39.56",
      "1.38.80",
      "1.38.70",
      "1.38.65",
      "1.38.60",
      "1.38.50",
      "1.38.43",
      "1.38.42",
      "1.38.41",
      "1.38.30",
      "1.38.19",
      "1.38.11",
      "1.37.110",
      "1.37.106",
      "1.37.96",
      "1.37.93",
      "1.37.92",
      "1.37.88",
      "1.37.80",
      "1.37.68",
      "1.37.66",
      "1.37.60",
      "1.37.58",
      "1.37.46",
      "1.37.38",
      "1.37.36",
      "1.37.20",
      "1.37.16",
      "1.37.6",
      "1.37.1",
      "1.36.1",
      "1.35.6",
      "1.35.0",
      "1.34.68",
      "1.34.58",
      "1.34.48",
      "1.34.46",
      "1.34.39",
      "1.34.38",
      "1.34.30",
      "1.34.26",
      "1.34.20",
      "1.34.6",
      "1.34.0",
      "1.33.36",
      "1.33.26",
      "1.33.6",
      "1.33.0",
      "1.32.46",
      "1.32.38",
      "1.32.28",
      "1.32.6",
      "1.31.1",
      "1.30.9",
      "1.29.5",
      "1.29.4",
      "1.29.2",
      "1.28.4",
      "1.28.3",
      "1.28.1",
      "1.27.30",
      "1.27.20",
      "1.27.19",
      "1.27.5",
      "1.26.2",
      "1.25.41",
      "1.25.40",
      "1.25.30",
      "1.24.13",
      "1.23.32",
      "1.23.28",
      "1.23.22",
      "1.23.20",
      "1.23.15",
      "1.23.8",
      "1.23.6",
      "1.23.4",
      "1.21.93",
      "1.21.91",
      "1.21.88",
      "1.21.74",
      "1.21.73",
      "1.21.57",
      "1.21.48",
      "1.21.40",
      "1.21.34",
      "1.21.20",
      "1.21.18",
      "1.21.9",
      "1.20.10",
      "1.20.6",
      "1.20.4",
      "1.19.5",
      "1.19.0",
      "1.18.5",
      "1.18.1",
      "1.18.0",
      "1.17.26",
      "1.17.21",
      "1.17.19",
      "1.17.3",
      "1.16.21",
      "1.16.11",
      "1.16.5",
      "1.16.3",
      "1.16.1",
      "1.15.3",
      "1.14.0",
      "1.13.4",
    ],
    "Id": "electerm.electerm",
    "IsUpdateAvailable": false,
    "Name": "electerm",
    "Source": "winget",
    "Version": "1.100.8",
  },
  {
    "AvailableVersions": [
      "3.1.0.105",
      "3.0.0.82",
    ],
    "Id": "lstratman.easyconnect",
    "IsUpdateAvailable": false,
    "Name": "EasyConnect",
    "Source": "winget",
    "Version": "3.1.0.105",
  },
  {
    "AvailableVersions": [
      "1.3.3",
      "1.0.6",
      "1.0.5",
      "1.0.4",
      "1.0.3",
    ],
    "Id": "rsteube.Carapace",
    "IsUpdateAvailable": false,
    "Name": "Carapace",
    "Source": "winget",
    "Version": "1.3.3",
  },
  {
    "AvailableVersions": [
      "1.2",
    ],
    "Id": "stax76.run-hidden",
    "IsUpdateAvailable": false,
    "Name": "run-hidden",
    "Source": "winget",
    "Version": "1.2",
  },
  {
    "AvailableVersions": [
      "0.6.10",
      "0.6.9",
      "0.6.8",
      "0.6.7",
      "0.6.6",
      "0.6.5",
      "0.6.4",
      "0.6.3",
      "0.6.2",
      "0.6.1",
      "0.6.0",
      "0.5.4",
      "0.5.3",
      "0.5.2",
      "0.5.1",
      "0.4.2",
      "0.4.1",
      "0.3.1",
      "0.3.0",
      "0.2.6",
      "0.2.4",
    ],
    "Id": "version-fox.vfox",
    "IsUpdateAvailable": false,
    "Name": "vfox",
    "Source": "winget",
    "Version": "0.6.10",
  },
  {
    "AvailableVersions": [
      "0.3.7",
      "0.3.6",
      "0.3.3",
      "0.3.1",
      "0.3.0",
      "0.2.9",
      "0.2.7",
      "0.2.6",
    ],
    "Id": "tickstep.aliyunpan",
    "IsUpdateAvailable": false,
    "Name": "aliyunpan",
    "Source": "winget",
    "Version": "0.3.7",
  },
  {
    "AvailableVersions": [
      "0.1.3",
    ],
    "Id": "tickstep.cloudpan189-go",
    "IsUpdateAvailable": false,
    "Name": "cloudpan189-go",
    "Source": "winget",
    "Version": "0.1.3",
  },
  {
    "AvailableVersions": [
      "5.0.0",
      "4.2.21",
      "4.2.20",
      "4.2.19",
      "4.2.18",
      "4.2.17",
      "4.0.12",
      "2.10.2",
      "2.6.2",
      "2.0.0",
      "1.4.0",
      "1.3.2",
    ],
    "Id": "IronmanSoftware.PowerShellUniversal",
    "IsUpdateAvailable": false,
    "Name": "PowerShell Universal",
    "Source": "winget",
    "Version": "5.0.0",
  },
  {
    "AvailableVersions": [
      "4.0.12",
      "2.10.2",
    ],
    "Id": "IronmanSoftware.PowerShellUniversal.Desktop",
    "IsUpdateAvailable": false,
    "Name": "PowerShell Universal Desktop",
    "Source": "winget",
    "Version": "4.0.12",
  },
  {
    "AvailableVersions": [
      "4.2.3735.5913",
    ],
    "Id": "Liquit.Workspace.PowerShell42",
    "IsUpdateAvailable": false,
    "Name": "Liquit Workspace PowerShell",
    "Source": "winget",
    "Version": "4.2.3735.5913",
  },
]
`;
